Confirmation message for signup

--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -47,6 +47,7 @@
   "LOGIN_BUTTON": "Entrar",
   "SIGNUP_TITLE": "Cadastre-se",
   "SIGNUP_ERROR": "Não foi possível criar sua conta. Verifique seus dados e tente novamente.",
+  "SIGNUP_CONFIRMATION": "Sua conta foi cadastrada com sucesso",
   "SIGNUP_BUTTON": "Cadastre-se",
 
   "LIST_MASTER_TITLE": "Itens",
