Wellcome message updated

--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -28,7 +28,7 @@
 
   "TUTORIAL_SLIDE4_TITLE": "Pronto para Usar?",
 
-  "WELCOME_INTRO" : "O ponto de partida para seu próximo app feito no Ionic",
+  "WELCOME_INTRO" : "Agende equipamentos por aqui e se preocupe somente com a diversão ; )",
 
   "SETTINGS_TITLE": "Configurações",
   "SETTINGS_OPTION1": "Opção 1",
