--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -65,5 +65,7 @@
   "CARDS_TITLE": "Social",
 
   "SEARCH_TITLE": "Busca",
-  "SEARCH_PLACEHOLDER" : "Procure um item da lista, ex: \"Donald Duck\""
+  "SEARCH_PLACEHOLDER" : "Procure um item da lista, ex: \"Donald Duck\"",
+
+  "ROL_LIST_TITLE": "Patins"
 }
